[gd_scene load_steps=3 format=3 uid="uid://qeudvvs4rr0f"]

[ext_resource type="Script" path="res://ui/event_info_boxes/path_point_info_boxes/path_point_info_box.gd" id="1_tv1j1"]
[ext_resource type="LabelSettings" uid="uid://bxw6tca3riwts" path="res://text_resources/infobox_text.tres" id="2_pilxa"]

[node name="PathPointInfoBox" type="ColorRect"]
custom_minimum_size = Vector2(290, 0)
color = Color(1, 1, 1, 0)
script = ExtResource("1_tv1j1")

[node name="Button" type="Button" parent="."]
modulate = Color(0.486275, 1, 1, 0.721569)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PointName" type="Label" parent="."]
layout_mode = 1
offset_right = 54.0
offset_bottom = 23.0
text = "Point 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="x" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 32.0
offset_right = 19.0
offset_bottom = 55.0
text = "x"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="y" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 71.0
offset_right = 19.0
offset_bottom = 94.0
text = "y"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 29.0
offset_right = 91.0625
offset_bottom = 60.0

[node name="y_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 69.0
offset_right = 91.0625
offset_bottom = 100.0

[node name="x2" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 33.0
offset_right = 112.0
offset_bottom = 56.0
text = "x"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="y2" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 72.0
offset_right = 112.0
offset_bottom = 95.0
text = "y"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x_in_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 30.0
offset_right = 184.062
offset_bottom = 61.0

[node name="y_in_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 70.0
offset_right = 184.062
offset_bottom = 101.0

[node name="x3" type="Label" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 34.0
offset_right = 205.0
offset_bottom = 57.0
text = "x"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="y3" type="Label" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 73.0
offset_right = 205.0
offset_bottom = 96.0
text = "y"
label_settings = ExtResource("2_pilxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="x_out_input3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 31.0
offset_right = 277.062
offset_bottom = 62.0

[node name="y_out_input3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 71.0
offset_right = 277.062
offset_bottom = 102.0

[node name="PointName2" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_right = 150.0
offset_bottom = 23.0
text = "In"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointName3" type="Label" parent="."]
layout_mode = 0
offset_left = 191.0
offset_right = 245.0
offset_bottom = 23.0
text = "Out"
horizontal_alignment = 1
vertical_alignment = 1
